--- a/src/component/introduction-page/style.scss
+++ b/src/component/introduction-page/style.scss
@@ -1,67 +1,64 @@
-.root {
+.landing-page {
     width: 100vw;
-}
+    .header {
+        height: 10vh;
+        width: 100%;
+        padding: 10px;
+        display: flex;
+        justify-content: space-around;
+        .test {
+            font-size: 2.5em;
+            font-weight: 500;
+        }
+    }
 
-.top {
-    height: 10vh;
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-}
+    .content {
+        position: relative;
+        width: 100vw;
+        background-image: url("../../utils/assets/0x0.png");
+        min-height: 100vh;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        overflow: hidden;
+    }
 
-.test {
-    font-size: 2.5em;
-    font-weight: 500;
-}
+    .image {
+        width: 100vw;
+        object-fit: contain;
+        min-height: 100vh;
+        overflow: hidden;
+    }
 
-.content {
-    position:relative;
-    width: 100vw;
-    background-image: url("../../utils/assets/0x0.png");
-    min-height: 100vh;
-     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    overflow: hidden;
-}
+    .overlay {
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        width: 60%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        text-align: center;
+    }
 
-.image {
-    width: 100vw;
-    object-fit:contain;
-    min-height: 100vh;
-    overflow: hidden;
-}
+    #name {
+        color: white;
+    }
+    .introWeb {
+        margin-top: 100px;
+        justify-content: center;
+    }
 
-.overlay {
-    position: absolute;
-    top: 40%;        
-    left: 20%;        
-    width: 60%;        
-    height: 100%;
-    justify-content: center;       
-    align-items: center;        
-    font-size: 2rem;
-    text-align: center;
-       
-}
+    #nameWeb {
+        text-align: center;
+        font-size: 45px;
+        font-weight: 600;
+    }
 
-#name {
-    color: white;
-}
-.introWeb {
-    margin-top: 100px   ;
-    justify-content: center;
-}
-
-#nameWeb {
-    text-align: center;
-    font-size: 45px;
-    font-weight: 600;
-}
-
-#webContent {
-    text-align: center;
-    font-size: 30px;
-    margin: auto;
-    width: 80vw;
+    #webContent {
+        text-align: center;
+        font-size: 30px;
+        margin: auto;
+        width: 80vw;
+    }
 }
