--- a/src/component/introduction-page/style.scss
+++ b/src/component/introduction-page/style.scss
@@ -1,64 +1,60 @@
 .landing-page {
+  width: 100vw;
+  .header {
+    height: 110px;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    .img {
+      width: 90px;
+      height: 90px;
+    }
+    .test {
+      font-size: 2.5em;
+      font-weight: 500;
+    }
+  }
+
+  .content {
+    position: relative;
     width: 100vw;
-    .header {
-        height: 10vh;
-        width: 100%;
-        padding: 10px;
-        display: flex;
-        justify-content: space-around;
-        .test {
-            font-size: 2.5em;
-            font-weight: 500;
-        }
-    }
-
-    .content {
-        position: relative;
-        width: 100vw;
-        background-image: url("../../utils/assets/0x0.png");
-        min-height: 100vh;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        overflow: hidden;
-    }
-
-    .image {
-        width: 100vw;
-        object-fit: contain;
-        min-height: 100vh;
-        overflow: hidden;
-    }
-
+    background-image: url('../../utils/assets/0x0.png');
+    min-height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
     .overlay {
-        position: absolute;
-        top: 40%;
-        left: 20%;
-        width: 60%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-        font-size: 2rem;
-        text-align: center;
+      position: absolute;
+      top: 40%;
+      left: 20%;
+      width: 60%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      text-align: center;
     }
+  }
+  .text-content {
+    padding: 80px 100px 20px 100px;
+  }
+  .two-col {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    .col-item {
+      flex: 1 0 50%;
+    }
+  }
+  .image {
+    width: 100vw;
+    object-fit: contain;
+    min-height: 100vh;
+    overflow: hidden;
+  }
 
-    #name {
-        color: white;
-    }
-    .introWeb {
-        margin-top: 100px;
-        justify-content: center;
-    }
-
-    #nameWeb {
-        text-align: center;
-        font-size: 45px;
-        font-weight: 600;
-    }
-
-    #webContent {
-        text-align: center;
-        font-size: 30px;
-        margin: auto;
-        width: 80vw;
-    }
+  #name {
+    color: white;
+  }
 }
