--- a/src/component/home-page/style.scss
+++ b/src/component/home-page/style.scss
@@ -20,7 +20,7 @@
     .action-list {
       display: flex;
       gap: 20px;
-      justify-content: space-evenly;
+      justify-content: center;
     }
   }
 }
