--- a/src/component/auth/style.scss
+++ b/src/component/auth/style.scss
@@ -1,4 +1,12 @@
 .container {
+  @keyframes move_down {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
   background: url('https://c4.wallpaperflare.com/wallpaper/123/312/5/earth-planet-stars-blue-marble-wallpaper-preview.jpg');
   width: 100vw;
   height: 100vh;
@@ -8,7 +16,21 @@
   justify-content: center;
   align-items: center;
 
+  &.pop-up {
+    background: transparent;
+    position: fixed;
+    top: 0;
+    .container-bg {
+      width: 100%;
+      height: 120%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #00000061;
+    }
+  }
   .background {
+    cursor: pointer;
     position: absolute;
     transform: translate(30%, 50%);
     background-repeat: no-repeat;
@@ -26,7 +48,7 @@
     justify-content: center;
     height: 500px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    opacity: 0.9;
+    animation: 1s move_down;
   }
   .img-contain {
     display: flex;
@@ -44,9 +66,6 @@
       width: 100px;
       top: -50px;
     }
-  }
-
-  .black-button {
   }
 }
 
