--- a/src/component/header/style.scss
+++ b/src/component/header/style.scss
@@ -16,7 +16,7 @@
   z-index: 1;
   background-color: white;
   box-shadow: 0 0 20px 0 black;
-  .img {
+  img {
     width: 90px;
     height: 90px;
     cursor: pointer;
