--- a/src/pages/landing-page/style.scss
+++ b/src/pages/landing-page/style.scss
@@ -33,6 +33,7 @@
     .img {
       width: 90px;
       height: 90px;
+      cursor: pointer;
     }
     .test {
       font-size: 2.5em;
@@ -50,9 +51,7 @@
     background-size: 100% 145%;
     background-position: center;
     overflow: hidden;
-    * {
-      font-family: 'Roboto', sans-serif;
-    }
+
     &.introWeb {
       background-image: url('https://uet.vnu.edu.vn/wp-content/uploads/2023/03/hb-lazada1.jpg');
     }
