--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,33 @@ code {
   width: 100vw;
   height: 100vh;
 }
+.ant-spin-container {
+  display: flex;
+  flex-direction: column;
+}
+.not-loged-header {
+  position: fixed;
+  height: 110px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 0 0 20px 0 black;
+  .img {
+    width: 90px;
+    height: 90px;
+    cursor: pointer;
+  }
+  .test {
+    font-size: 2.5em;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
+}
 
 .cm-scroller::-webkit-scrollbar,
 .scroll-bar::-webkit-scrollbar {
