--- a/src/pages/initiative_pages/style.scss
+++ b/src/pages/initiative_pages/style.scss
@@ -3,7 +3,7 @@
     min-height: 100vh;
     .main-frame {
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-        width: 1000px;
+        width: 1200px;
         margin-inline: auto;
         margin-block: 50px;
         border-radius: 10px;
@@ -11,7 +11,7 @@
         .banner {
             padding-block: 40px;
             padding-inline: 20px;
-            max-width: 1000px;
+            max-width: 1200px;
             background-color: wheat;
             margin-bottom: 0;
             .banner-title {
@@ -28,7 +28,7 @@
             }
         }
         .content {
-            max-width: 1000px;
+            max-width: 1200px;
             padding-inline: 20px;
             padding-block: 40px;
             background: #ffffffc7;
@@ -119,7 +119,8 @@
             background-color: #369af8;
         }
         .content {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
             justify-content: space-around;
             .member {
                 display: flex;
@@ -141,6 +142,7 @@
                     font-weight: 400;
                 }
                 .member-description {
+                    white-space: break-spaces;
                     font-size: 16px;
                     font-weight: 400;
                 }
