--- a/src/pages/chart_create-page/style.scss
+++ b/src/pages/chart_create-page/style.scss
@@ -1,8 +1,19 @@
 .chart-create-page {
-    padding: 50px 100px 50px 100px;
-    .row {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
+    padding: 40px 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    h1 {
+        font-size: 2em;
+    }
+    .chart-data-create {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        .chart-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
     }
 }
