--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 
@@ -80,5 +80,36 @@ code {
   transition: all 0.2s ease-in-out;
   &:hover {
     background-color: #007ef3;
+  }
+}
+.main-input {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  &.dimmed {
+    border: none;
+    border-bottom: 1px solid #ced4da;
+    font-weight: 600;
+  }
+}
+.delete-button {
+  background-color: #ff4d4f;
+  border: 1px solid #ff7a7b;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  color: white;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    background-color: #ff1f1f;
   }
 }
