--- a/src/pages/chart_create-page/style.scss
+++ b/src/pages/chart_create-page/style.scss
@@ -1,19 +1,57 @@
 .chart-create-page {
+    background: url("../../../public/image/chartbg.webp");
     padding: 40px 100px;
     display: flex;
     flex-direction: column;
     gap: 25px;
+    .color-picker {
+        border-radius: 50%;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
+        &:hover {
+            .color-picker-picker {
+                display: initial;
+            }
+        }
+        .color-picker-picker {
+            z-index: 1;
+            display: none;
+            background-color: white;
+            padding: 15px;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
+
     h1 {
         font-size: 2em;
     }
     .chart-data-create {
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        gap: 10px;
+        background: white;
+        max-width: 375px;
+        padding: 15px;
+        border: 1px solid #ebedf3;
+        border-radius: 0.42rem;
+        box-shadow: 0 0 30px 0 rgba(82, 63, 105, 0.05);
         .chart-row {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 0.5fr 1fr;
             gap: 10px;
         }
+    }
+    .chart-wrapper {
+        text-align: center;
+        line-height: 1.5;
+        background: white;
+        padding: 15px;
+        border: 1px solid #ebedf3;
+        border-radius: 0.42rem;
+        box-shadow: 0 0 30px 0 rgba(82, 63, 105, 0.05);
     }
 }
