--- a/src/pages/chart_create-page/style.scss
+++ b/src/pages/chart_create-page/style.scss
@@ -4,6 +4,13 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
+    .item-row {
+        display: flex;
+        gap: 5%;
+        .item-col {
+            flex: 1;
+        }
+    }
     .color-picker {
         border-radius: 50%;
         position: relative;
@@ -46,12 +53,32 @@
         }
     }
     .chart-wrapper {
+        position: relative;
         text-align: center;
         line-height: 1.5;
         background: white;
-        padding: 15px;
+        padding: 45px 35px 25px 35px;
         border: 1px solid #ebedf3;
         border-radius: 0.42rem;
         box-shadow: 0 0 30px 0 rgba(82, 63, 105, 0.05);
+        .chart-x-axis {
+            position: absolute;
+            bottom: 5%;
+            left: 90%;
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 0 10px;
+        }
+        .chart-y-axis {
+            position: absolute;
+            top: 0;
+            left: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 10px 0;
+        }
     }
 }
