--- a/src/pages/chart_create-page/style.scss
+++ b/src/pages/chart_create-page/style.scss
@@ -30,6 +30,8 @@
             position: absolute;
             top: 0;
             left: 0;
+            filter:drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+            border-radius: 15px;
         }
     }
 
