--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
 }
 
@@ -70,19 +70,25 @@ code {
 .ant-modal-header {
   border-radius: 15px 15px 0px 0px !important;
 }
-.main-button {
-  background-color: #1890ff;
-  border: 1px solid #57a6f0;
-  border-radius: 5px;
-  padding: 5px 10px;
+.main-button,
+button.ant-btn-primary {
+  background-image: url(../public/image/components/button.png);
+  border-radius: 6px;
+  padding: 2px 10px;
+  border: none;
+  height: fit-content;
+  font-weight: 600;
   cursor: pointer;
   color: white;
   transition: all 0.2s ease-in-out;
+  font-size: 22px;
   &:hover {
-    background-color: #007ef3;
+    background-image: url(../public/image/components/button-hover.png);
+    color: #57a6f0;
+    filter: drop-shadow(0px 0px 2px #57a6f0);
   }
 }
-.main-input {
+input.main-input {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -102,14 +108,14 @@ code {
   }
 }
 .delete-button {
-  background-color: #ff4d4f;
-  border: 1px solid #ff7a7b;
+  background-image: linear-gradient(315deg, #e62148 0%, #e0184a 74%);
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
   color: white;
   transition: all 0.2s ease-in-out;
   &:hover {
-    background-color: #ff1f1f;
+    background: white !important;
+    color: #e62148 !important;
   }
 }
