--- a/src/pages/simulation_help-page/style.scss
+++ b/src/pages/simulation_help-page/style.scss
@@ -1,11 +1,11 @@
 .simulation-edit-page {
-    background: url('../../../public/image/simulation.webp');
+    background: url(../../../public/image/curvy_bg.jpg);
     background-size: cover;
     min-height: 100vh;
     background-repeat: no-repeat;
     .content {
         max-width: 1000px;
-        margin: 20px auto auto;
+        margin: 40px auto 40px auto;
         display: flex;
         flex-direction: column;
         gap: 20px;
