--- a/src/component/edit-page/style.scss
+++ b/src/component/edit-page/style.scss
@@ -11,11 +11,17 @@
   border-color: #fff !important;
   user-select: none;
 }
-
+aside.ant-layout-sider-dark {
+  min-width: 0 !important;
+  width: 0 !important;
+}
 .ant-layout-sider {
   height: 90vh;
 }
-
+.ant-tabs-tab{
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+}
 .main-content {
   width: 100%;
   height: 100%;
