--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -1,8 +1,44 @@
 .research-page {
-    padding: 0 210px;
+    padding: 40px 310px;
     background: url("../../../public/image/chartbg.webp");
-
+    .header-faux {
+        position: relative;
+        top: -120px;
+        height: 0;
+    }
+    .page-navigator {
+        position: fixed;
+        border-radius: 20px;
+        top: 150px;
+        left: 50px;
+        width: 250px;
+        padding: 15px 25px;
+        background-color: white;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        display: flex;
+        flex-direction: column;
+        a {
+            font-weight: 600;
+        }
+    }
+    .research-header {
+        background: url("../../../public/image/research-header.jpg");
+        height: 200px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        h1 {
+            font-weight: 600 !important;
+            font-size: 36px;
+            color: white;
+            filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
+        }
+    }
     .research-body {
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
         background: white;
         padding: 25px 15px;
         display: grid;
