--- a/src/component/header/style.scss
+++ b/src/component/header/style.scss
@@ -43,6 +43,10 @@
           box-shadow: 0.5px 1px 5px 1px #e5bdf693;
         }
       }
+/*       &.active {
+        color: #1890ff;
+        text-decoration: underline;
+      } */
       .menu-dropdown {
         transition: all 0.2s;
         overflow: hidden;
