--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -4,7 +4,8 @@
     min-height: 100vh;
     display: grid;
     grid-template-columns: 250px 1fr 250px;
-    gap: 4vmin;
+    justify-items: center;
+    gap: 8vmin;
     background-color: #cdc1ff;
     background-image: linear-gradient(316deg, #cdc1ff 0%, #e5d9f2 74%);
     .forum-sidebar-left {
@@ -29,6 +30,12 @@
                 background-color: white;
                 color: black;
                 border-radius: 30px;
+                input {
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    background: transparent;
+                }
             }
             &:hover {
                 background: #ddd0ff;
@@ -40,6 +47,7 @@
     .forum-body {
         width: 100%;
         margin-top: 30px;
+        max-width: 650px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -57,12 +65,18 @@
             }
         }
         .post-item {
+            position: relative;
             display: flex;
             flex-direction: column;
             gap: 5px;
             border-radius: 20px;
             background-color: #fff;
             padding: 25px 30px;
+            .bookmark-icon {
+                position: absolute;
+                top: 20px;
+                right: 20px;
+            }
             filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
             min-height: 200px;
             .post-item-header {
@@ -84,6 +98,45 @@
             }
             .post-item-body {
                 word-break: break-spaces;
+            }
+            .post-item-interact {
+                display: flex;
+                border-top: 1px solid #a7a7a7;
+                padding-top: 10px;
+                padding-bottom: 5px;
+                align-items: center;
+                gap: 15px;
+                .interact-comment {
+                    padding: 10px 10px;
+                    background: #f0f2f5;
+                    border-radius: 15px;
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                }
+            }
+            .post-item-footer {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                border-top: 1px solid #a7a7a7;
+                padding-top: 10px;
+                padding-bottom: 5px;
+                .comment-item {
+                    display: grid;
+                    grid-template-columns: 30px 1fr;
+                    padding: 10px 10px;
+                    align-items: center;
+                    background: #f0f2f5;
+                    border-radius: 15px;
+                    gap: 15px;
+                    .comment-avatar {
+                        width: 100%;
+                        border-radius: 50%;
+                    }
+                    .comment-text {
+                    }
+                }
             }
         }
     }
