feat: Forum post n stuff

--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -63,6 +63,9 @@
                 border: none;
                 background-color: transparent;
             }
+            .post-button {
+                cursor: pointer;
+            }
         }
         .post-item {
             position: relative;
