--- a/src/component/forum/topic-view/style.scss
+++ b/src/component/forum/topic-view/style.scss
@@ -81,17 +81,34 @@
         padding-bottom: 5px;
         .comment-item {
             display: grid;
-            grid-template-columns: 30px 1fr 1fr;
+            grid-template-columns: 30px 1fr;
             padding: 10px 10px;
             align-items: center;
             background: #f0f2f5;
             border-radius: 15px;
             gap: 15px;
+            position: relative;
             .comment-avatar {
                 width: 100%;
                 border-radius: 50%;
             }
             .comment-text {
+            }
+            .delete-comment {
+                position: absolute;
+                top: 50%;
+                right: 10px;
+                transform: translateY(-50%);
+                display: none;
+                transition: 0.2s all ease-in-out;
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
+            &:hover {
+                .delete-comment {
+                    display: initial;
+                }
             }
         }
     }
