--- a/src/pages/account-page/style.scss
+++ b/src/pages/account-page/style.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-wrap: wrap;
         width: 80%;
-        
+
         .profession-item {
             padding: 15px 25px;
             background: white;
@@ -37,6 +37,9 @@
         .gender-ava {
             justify-content: space-between;
             display: flex;
+            img {
+                width: 50%;
+            }
         }
     }
 }
