--- a/src/pages/admin-page/style.scss
+++ b/src/pages/admin-page/style.scss
@@ -37,6 +37,9 @@
         .gender-ava {
             justify-content: space-between;
             display: flex;
+            img {
+                width: 50%;
+            }
         }
     }
 }
