--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -67,6 +67,13 @@
                 cursor: pointer;
             }
         }
+        .ant-select {
+            width: 50%;
+            margin-left: 50%;
+            .ant-select-selector {
+                border-radius: 20px;
+            }
+        }
         .post-item {
             position: relative;
             display: flex;
