--- a/src/component/simulation-page/style.scss
+++ b/src/component/simulation-page/style.scss
@@ -25,8 +25,8 @@
   width: 315px !important;
 }
 main.ant-layout-content {
-
 }
+
 .main-content_1 {
   width: 100vw;
   height: 80vh;
@@ -34,6 +34,10 @@ main.ant-layout-content {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  .transform-component-module_content__uCDPE img {
+    max-height: 75vh;
+    width: auto;
+  }
 }
 .ant-layout-content {
   background-color: #bdd4e7;
