--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -25,6 +25,10 @@
             font-size: 20px;
             border-radius: 15px;
             transition: all 0.3s;
+            &.active {
+                background: #8d7ac273;
+                color: #7241f7;
+            }
             &.search {
                 padding: 5px 20px;
                 background-color: white;
@@ -163,6 +167,7 @@
             grid-template-columns: 40px 1fr;
             gap: 15px;
             align-items: center;
+
             .forum-sidebar-item-avatar {
                 width: 100%;
                 border-radius: 50%;
