--- a/src/component/research/topic-post/style.scss
+++ b/src/component/research/topic-post/style.scss
@@ -1,4 +1,4 @@
-.topic-post-modal {
+.research-post-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -22,14 +22,9 @@
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 20px;
-        min-width: 50%;
+        min-width: 70%;
         .ant-col-16 {
             max-width: none;
-        }
-        .SKEditor__content {
-            border: 1px solid grey;
-            padding: 5px;
-            min-height: 20vh;
         }
     }
 }
