--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -1,10 +1,32 @@
 .research-page {
-    padding: 40px 310px;
+    padding: 40px 40px;
     background: url("../../../public/image/chartbg.webp");
     .header-faux {
         position: relative;
         top: -120px;
         height: 0;
+    }
+    .clickable-icon {
+        svg {
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+        &.approved {
+            color: #1abf6e;
+        }
+        &.disapproved {
+            color: #f04c49;
+        }
+    }
+    .approve-button {
+        position: absolute;
+        top: 20px;
+        right: 0;
+        display: flex;
+        gap: 20px;
     }
     .page-navigator {
         position: fixed;
@@ -17,11 +39,15 @@
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         display: flex;
         flex-direction: column;
-        a {
-            font-weight: 600;
+        gap: 25px;
+        input,
+        select {
+            border-radius: 15px;
         }
     }
     .research-header {
+        max-width: 700px;
+        margin: auto;
         background: url("../../../public/image/research-header.jpg");
         height: 200px;
         border-top-left-radius: 20px;
@@ -37,12 +63,24 @@
         }
     }
     .research-body {
+        max-width: 700px;
+        margin: auto;
         border-bottom-right-radius: 20px;
         border-bottom-left-radius: 20px;
         background: white;
-        padding: 25px 15px;
+        min-height: 400px;
+        padding: 25px 30px;
         display: grid;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        .research-item {
+            min-height: 15vh;
+            max-width: 100%;
+            padding-top: 20px;
+            position: relative;
+            .title {
+                border-bottom: 1px solid #e0e0e0;
+            }
+        }
         img {
             max-width: 95%;
             margin-bottom: 1em;
