--- a/src/component/forum/topic-post/style.scss
+++ b/src/component/forum/topic-post/style.scss
@@ -18,9 +18,9 @@
         background-color: white;
         margin: auto;
         position: absolute;
-        top: 50%;
+        top: 140px;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, 0);
         padding: 20px;
         min-width: 50%;
         .ant-col-16 {
