--- a/src/pages/account-list-page/style.scss
+++ b/src/pages/account-list-page/style.scss
@@ -12,8 +12,11 @@
         overflow: auto;
         .account-item {
             display: grid;
-            grid-template-columns: 70px 100px 100px 100px;
+            grid-template-columns: 70px 100px 100px 100px 100px;
             position: relative;
+            gap: 2%;
+            align-items: center;
+
             div {
                 text-overflow: ellipsis;
                 overflow: hidden;
