--- a/src/index.scss
+++ b/src/index.scss
@@ -105,7 +105,42 @@ input.main-input {
     border: none;
     border-bottom: 1px solid #ced4da;
     font-weight: 600;
+    background-color: #f0f1f1;
   }
+}
+.clickable-icon {
+  svg {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+      transform: scale(1.15);
+    }
+  }
+  &.approved {
+    color: #1abf6e;
+  }
+  &.disapproved {
+    color: #f04c49;
+  }
+  &.bookmarked {
+    color: #f5a623;
+  }
+}
+select.main-input {
+  width: 100%;
+  min-width: 150px;
+  outline: none;
+  display: block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 20px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .delete-button {
   background-image: linear-gradient(315deg, #e62148 0%, #e0184a 74%);
