--- a/src/pages/forum-page/style.scss
+++ b/src/pages/forum-page/style.scss
@@ -159,7 +159,6 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
-        overflow: overlay;
         background-color: #eff5f78c;
 
         .forum-sidebar-item {
@@ -167,7 +166,46 @@
             grid-template-columns: 40px 1fr;
             gap: 15px;
             align-items: center;
+            position: relative;
+            &:hover {
+                background: #ddd0ff85;
+                color: #8d63fff3;
+                .user-info-card {
+                    display: flex;
+                    transition-delay: 1s;
+                }
+            }
 
+            .user-info-card {
+                color: #1c1c1d;
+                white-space: nowrap;
+                display: none;
+                transition: 0s display;
+                position: absolute;
+                top: 0;
+                left: -260px;
+                width: 250px;
+                padding: 10px;
+                background: #fff;
+                border-radius: 10px;
+                filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
+                flex-direction: column;
+                gap: 10px;
+                .card-ava-name {
+                    display: flex;
+                    gap: 10px;
+                    white-space: initial;
+                    word-break: break-all;
+                    .user-avatar {
+                        width: 30%;
+                    }
+                }
+                .field-info {
+                    background: rgb(216, 215, 215);
+                    padding: 5px;
+                    border-radius: 10px;
+                }
+            }
             .forum-sidebar-item-avatar {
                 width: 100%;
                 border-radius: 50%;
