--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -1,26 +1,14 @@
 .research-page {
     padding: 40px 40px;
+    display: flex;
+    gap: 2vmin;
     background: url("../../../public/image/chartbg.webp");
     .header-faux {
         position: relative;
         top: -120px;
         height: 0;
     }
-    .clickable-icon {
-        svg {
-            cursor: pointer;
-            transition: all 0.2s ease-in-out;
-            &:hover {
-                transform: scale(1.1);
-            }
-        }
-        &.approved {
-            color: #1abf6e;
-        }
-        &.disapproved {
-            color: #f04c49;
-        }
-    }
+
     .approve-button {
         position: absolute;
         top: 20px;
@@ -29,10 +17,8 @@
         gap: 20px;
     }
     .page-navigator {
-        position: fixed;
+        height: fit-content;
         border-radius: 20px;
-        top: 150px;
-        left: 50px;
         width: 250px;
         padding: 15px 25px;
         background-color: white;
@@ -45,56 +31,58 @@
             border-radius: 15px;
         }
     }
-    .research-header {
-        max-width: 700px;
-        margin: auto;
-        background: url("../../../public/image/research-header.jpg");
-        height: 200px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        h1 {
-            font-weight: 600 !important;
-            font-size: 36px;
-            color: white;
-            filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
-        }
-    }
-    .research-body {
-        max-width: 700px;
-        margin: auto;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
-        background: white;
-        min-height: 400px;
-        padding: 25px 30px;
-        display: grid;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        .research-item {
-            min-height: 15vh;
-            max-width: 100%;
-            padding-top: 20px;
-            position: relative;
-            .title {
-                border-bottom: 1px solid #e0e0e0;
+    .research-content {
+        width: 100%;
+        max-width: 1000px;
+        .research-header {
+            margin: auto;
+            background: url("../../../public/image/research-header.jpg");
+            height: 200px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            h1 {
+                font-weight: 600 !important;
+                font-size: 36px;
+                color: white;
+                filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
             }
         }
-        img {
-            max-width: 95%;
-            margin-bottom: 1em;
-        }
-        iframe {
-            margin-bottom: 1em;
-        }
-        h2 {
-            font-weight: 600;
-            font-size: 20px;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.5;
+        .research-body {
+            margin: auto;
+            border-bottom-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            background: white;
+            min-height: 400px;
+            padding: 25px 30px;
+            display: grid;
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+            .research-item {
+                min-height: 15vh;
+                max-width: 100%;
+                padding-top: 20px;
+                position: relative;
+                .title {
+                    border-bottom: 1px solid #e0e0e0;
+                }
+            }
+            img {
+                max-width: 95%;
+                margin-bottom: 1em;
+            }
+            iframe {
+                margin-bottom: 1em;
+            }
+            h2 {
+                font-weight: 600;
+                font-size: 20px;
+            }
+            p {
+                font-size: 18px;
+                line-height: 1.5;
+            }
         }
     }
 }
