--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -1,6 +1,7 @@
 .research-page {
     padding: 40px 40px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 250px 1fr 250px;
     gap: 2vmin;
     background: url("../../../public/image/chartbg.webp");
     .header-faux {
@@ -19,7 +20,6 @@
     .page-navigator {
         height: fit-content;
         border-radius: 20px;
-        width: 250px;
         padding: 15px 25px;
         background-color: white;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
