--- a/src/pages/research/style.scss
+++ b/src/pages/research/style.scss
@@ -3,6 +3,8 @@
     display: grid;
     grid-template-columns: 250px 1fr 250px;
     gap: 2vmin;
+    align-items: center;
+    justify-items: center;
     background: url("../../../public/image/chartbg.webp");
     .header-faux {
         position: relative;
