--- a/src/component/forum/topic-view/style.scss
+++ b/src/component/forum/topic-view/style.scss
@@ -6,11 +6,12 @@
     border-radius: 20px;
     background-color: #fff;
     padding: 25px 30px;
+    padding-top: 40px;
 
     .approve-button {
         position: absolute;
-        top: 20px;
-        right: 60px;
+        top: 12px;
+        right: 20px;
         display: flex;
         gap: 20px;
     }
