--- a/src/component/research/research-view/style.scss
+++ b/src/component/research/research-view/style.scss
@@ -1,7 +1,27 @@
 .research-item {
-    border-radius: 20px;
-    background-color: white;
-    margin: auto;
-    padding: 20px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    min-height: 15vh;
+    max-width: 100%;
+    padding-top: 20px;
+    position: relative;
+    .title {
+        border-bottom: 1px solid #e0e0e0;
+    }
+    &.preview-mode {
+        // create a gradient overlay on top of the element
+        &:before {
+            content: "View more";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            // use the gradient from the original element
+            background: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0) 50%,
+                rgba(255, 255, 255, 1) 100%
+            );
+        }
+    }
 }
